--- a/style.css
+++ b/style.css
@@ -29,32 +29,52 @@ body {
     }
 }
 
+h2 {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
 #pokemon {
+    background: rgb(156, 156, 156);
+    background: linear-gradient(90deg, rgba(156, 156, 156, 1) 0%, rgba(241, 241, 241, 1) 51%, rgba(156, 156, 156, 1) 100%);
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 #pokeImage {
-    width: 90%;
-    background: rgb(255, 237, 198);
-    background: radial-gradient(circle, rgba(255, 237, 198, 1) 0%, rgba(255, 228, 122, 1) 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(255, 228, 122);
+    background: linear-gradient(90deg, rgba(255, 228, 122, 1) 0%, rgba(255, 237, 198, 1) 50%, rgba(255, 228, 122, 1) 100%);
     border-radius: 8px;
+    margin: 10px;
 }
 
 #pokeImage img {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
 }
 
 #pokeContent {
+    background: rgb(201, 201, 201);
+    background: linear-gradient(90deg, rgba(201, 201, 201, 1) 0%, rgba(255, 250, 238, 1) 50%, rgba(201, 201, 201, 1) 100%);
+    display: block;
     padding: 16px;
+    font-size: 0.8em;
+    border-radius: 0 0 8px 8px;
+    margin: 10px;
+    flex: 0.5;
 }
 
 #pokeContent h4 {
     text-transform: capitalize;
-    font-size: 1.2em;
-    margin: 0 0 8px;
-    padding-bottom: 15px;
+    font-size: 1rem;
+    margin: 8px 0 8px;
 }
 
 #pokeContent ul {
@@ -105,4 +125,18 @@ ul li:last-child::after {
 
 #pokeWeight::after {
     content: "\00a0kg";
+}
+
+#pokeHeight,
+#pokeWeight {
+    display: inline-block;
+    width: 48%;
+}
+
+#pokeHeight {
+    text-align: left;
+}
+
+#pokeWeight {
+    text-align: right;
 }
